--- a/CoSE Encoder base.ipynb
+++ b/CoSE Encoder base.ipynb
@@ -17,9 +17,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mDEPRECATION: Python 2.7 reached the end of its life on January 1st, 2020. Please upgrade your Python as Python 2.7 is no longer maintained. pip 21.0 will drop support for Python 2.7 in January 2021. More details about Python 2 support in pip can be found at https://pip.pypa.io/en/latest/development/release-process/#python-2-support pip 21.0 will remove support for this functionality.\u001b[0m\n",
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already up-to-date: pip in ./.local/lib/python2.7/site-packages (20.3.3)\n"
+      "Collecting pip\n",
+      "  Downloading https://files.pythonhosted.org/packages/54/eb/4a3642e971f404d69d4f6fa3885559d67562801b99d7592487f1ecc4e017/pip-20.3.3-py2.py3-none-any.whl (1.5MB)\n",
+      "\u001b[K    100% |████████████████████████████████| 1.5MB 863kB/s ta 0:00:01\n",
+      "\u001b[?25hInstalling collected packages: pip\n",
+      "Successfully installed pip-20.3.3\n"
      ]
     }
    ],
