--- a/test1.ipynb
+++ b/test1.ipynb
@@ -11,13 +11,13 @@
      "text": [
       "Collecting torch==1.7.1\n",
       "  Using cached https://files.pythonhosted.org/packages/90/4f/acf48b3a18a8f9223c6616647f0a011a5713a985336088d7c76f3a211374/torch-1.7.1-cp36-cp36m-manylinux1_x86_64.whl\n",
-      "Collecting numpy (from torch==1.7.1)\n",
-      "  Using cached https://files.pythonhosted.org/packages/45/b2/6c7545bb7a38754d63048c7696804a0d947328125d81bf12beaa692c3ae3/numpy-1.19.5-cp36-cp36m-manylinux1_x86_64.whl\n",
       "Collecting dataclasses; python_version < \"3.7\" (from torch==1.7.1)\n",
       "  Using cached https://files.pythonhosted.org/packages/fe/ca/75fac5856ab5cfa51bbbcefa250182e50441074fdc3f803f6e76451fab43/dataclasses-0.8-py3-none-any.whl\n",
+      "Collecting numpy (from torch==1.7.1)\n",
+      "  Using cached https://files.pythonhosted.org/packages/45/b2/6c7545bb7a38754d63048c7696804a0d947328125d81bf12beaa692c3ae3/numpy-1.19.5-cp36-cp36m-manylinux1_x86_64.whl\n",
       "Collecting typing-extensions (from torch==1.7.1)\n",
       "  Using cached https://files.pythonhosted.org/packages/60/7a/e881b5abb54db0e6e671ab088d079c57ce54e8a01a3ca443f561ccadb37e/typing_extensions-3.7.4.3-py3-none-any.whl\n",
-      "Installing collected packages: numpy, dataclasses, typing-extensions, torch\n",
+      "Installing collected packages: dataclasses, numpy, typing-extensions, torch\n",
       "Successfully installed dataclasses-0.8 numpy-1.19.5 torch-1.7.1 typing-extensions-3.7.4.3\n",
       "Collecting tfrecord\n",
       "Collecting numpy (from tfrecord)\n",
@@ -292,13 +292,13 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.8219, -0.6531, -0.1365,  ..., -0.2305,  0.0314,  0.0276],\n",
-       "        [-0.8219, -0.6531, -0.1367,  ..., -0.2304,  0.0315,  0.0276],\n",
-       "        [-0.9356, -0.4667,  0.0240,  ..., -0.4332, -0.1367,  0.3417],\n",
+       "tensor([[ 0.5120,  0.1975, -0.1460,  ...,  0.9980,  0.2500,  0.0383],\n",
+       "        [ 0.5119,  0.1977, -0.1459,  ...,  0.9981,  0.2499,  0.0384],\n",
+       "        [ 0.2533,  0.0943, -0.0844,  ...,  1.0005,  0.4688,  0.0350],\n",
        "        ...,\n",
-       "        [-0.9348, -0.5076, -0.2448,  ..., -0.2927,  0.0137,  0.1151],\n",
-       "        [-0.9348, -0.5075, -0.2447,  ..., -0.2927,  0.0137,  0.1149],\n",
-       "        [-0.8200, -0.5455, -0.1384,  ..., -0.3922, -0.0516,  0.2164]],\n",
+       "        [ 0.4705,  0.4107,  0.0568,  ...,  0.5677,  0.1739, -0.3090],\n",
+       "        [ 0.4706,  0.4109,  0.0568,  ...,  0.5680,  0.1739, -0.3090],\n",
+       "        [ 0.1095,  0.5977,  0.0523,  ...,  0.8381,  0.3796, -0.1001]],\n",
        "       device='cuda:1', grad_fn=<AddmmBackward>)"
       ]
      },
@@ -356,7 +356,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Decoder(nn.Module):\n",
+    "3class Decoder(nn.Module):\n",
     "    def __init__(self, size_embedding):\n",
     "        self.dense1 = nn.Linear(in_features=size_embedding, out_features=512)\n",
     "        self.dense2 = nn.Linear(in_features=512, out_features=512)\n",
