decoder first part added

--- a/test1.ipynb
+++ b/test1.ipynb
@@ -356,7 +356,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "3class Decoder(nn.Module):\n",
+    "class Decoder(nn.Module):\n",
     "    def __init__(self, size_embedding):\n",
     "        self.dense1 = nn.Linear(in_features=size_embedding, out_features=512)\n",
     "        self.dense2 = nn.Linear(in_features=512, out_features=512)\n",
