--- a/test1.ipynb
+++ b/test1.ipynb
@@ -55,7 +55,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Relational(nn.Module):\n",
+    "    def __init__(self,d_model, nhead, dff, nlayers, input_size, dropout = 0):\n",
+    "        super(Relational, self).__init__()\n",
+    "        from torch.nn import TransformerDecoderLayer, TransformerDecoder\n",
+    "        self.dense1 = nn.Linear(input_size, d_model)\n",
+    "        decoder_layers = TransformerDecoderLayer(d_model, nhead, dff, dropout)\n",
+    "        self.transformer_decoder = TransformerDecoder(decoder_layers, nlayers)\n",
+    "        #self.dense2 = nn.Linear(d_model, size_embedding)\n",
+    "        #self.gmm = \n",
+    "    \n",
+    "    def get_last_time_step(self, tensor, stroke_lengths):\n",
+    "        \n",
+    "        embeddingd_lt = []\n",
+    "        \n",
+    "        for pos_embedding in range(tensor.shape[0]):\n",
+    "            embedding = tensor[pos_embedding, stroke_lengths[pos_embedding]-1,:]\n",
+    "            embeddingd_lt.append(embedding)\n",
+    "        \n",
+    "        embeddingd_lt = torch.vstack(embeddingd_lt) \n",
+    "        \n",
+    "        return embeddingd_lt\n",
+    "    \n",
+    "    \n",
+    "    def forward(self, src, src_mask):\n",
+    "        #src = self.pos_encoder(src)\n",
+    "        output = self.dense1(src)\n",
+    "        #print(output[:,None,:].shape)\n",
+    "        output = self.transformer_decoder(output[:,None,:], output[:,None,:])\n",
+    "         \n",
+    "        #output = self.get_last_time_step(output, stroke_lengths)\n",
+    "        output = output[:,-1,:]\n",
+    "        \n",
+    "        #output = self.gmm(output)\n",
+    "        \n",
+    "        return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -111,25 +154,17 @@
       "          48, 101,  51, 100,  98,  97,  57,  56,  49, 100,  49,  97]],\n",
       "       dtype=torch.uint8), 'ink': tensor([[0.1517, 0.5780, 0.0000,  ..., 0.0000, 0.0000, 0.0000]]), 'stroke_length': tensor([[ 32,  32,  25,  43, 128,  31,  33,  34,  29]], dtype=torch.int32), 'shape': tensor([[  9, 128,   4]], dtype=torch.int32), 'num_strokes': tensor([[9]], dtype=torch.int32), 'rdp_ink': tensor([[187.4000, 751.9100,   0.0000,  ...,   0.0000,   0.0000,   0.0000]]), 'rdp_stroke_length': tensor([[38, 36, 33, 21, 29, 19, 16, 13, 16]], dtype=torch.int32), 'rdp_shape': tensor([[ 9, 38,  4]], dtype=torch.int32), 'rdp_num_strokes': tensor([[9]], dtype=torch.int32)}\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/shuaman/.local/lib/python3.6/site-packages/torch/utils/data/_utils/collate.py:63: UserWarning: The given NumPy array is not writeable, and PyTorch does not support non-writeable tensors. This means you can write to the underlying (supposedly non-writeable) NumPy array using the tensor. You may want to copy the array to protect its data or make it writeable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /pytorch/torch/csrc/utils/tensor_numpy.cpp:141.)\n",
-      "  return default_collate([torch.as_tensor(b) for b in batch])\n"
-     ]
     }
    ],
    "source": [
     "dataiter = iter(loader)\n",
-    "data = dataiter.next()\n",
+    ". = dataiter.next()\n",
     "print(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +185,7 @@
        "32"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +233,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.1517, 0.5780],\n",
+       "        [1.1419, 0.0811],\n",
+       "        [2.0582, 0.6355],\n",
+       "        [1.0001, 0.7735],\n",
+       "        [1.9281, 0.2507],\n",
+       "        [1.6074, 0.2034],\n",
+       "        [1.5922, 0.7573],\n",
+       "        [0.6347, 0.8220],\n",
+       "        [0.6258, 0.7169]], device='cuda:1')"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xd[:,0,:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +270,7 @@
        "torch.Size([9, 128, 3])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +338,7 @@
        "         [0.0000e+00, 0.0000e+00, 0.0000e+00]]], device='cuda:1')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,23 +349,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.5120,  0.1975, -0.1460,  ...,  0.9980,  0.2500,  0.0383],\n",
-       "        [ 0.5119,  0.1977, -0.1459,  ...,  0.9981,  0.2499,  0.0384],\n",
-       "        [ 0.2533,  0.0943, -0.0844,  ...,  1.0005,  0.4688,  0.0350],\n",
+       "tensor([[-0.1477,  0.0227, -0.9072,  ...,  0.2539,  0.1685,  0.7555],\n",
+       "        [-0.1477,  0.0228, -0.9072,  ...,  0.2539,  0.1684,  0.7556],\n",
+       "        [-0.3132, -0.0559, -0.8154,  ...,  0.0803,  0.1507,  0.8603],\n",
        "        ...,\n",
-       "        [ 0.4705,  0.4107,  0.0568,  ...,  0.5677,  0.1739, -0.3090],\n",
-       "        [ 0.4706,  0.4109,  0.0568,  ...,  0.5680,  0.1739, -0.3090],\n",
-       "        [ 0.1095,  0.5977,  0.0523,  ...,  0.8381,  0.3796, -0.1001]],\n",
+       "        [-0.2346, -0.0872, -0.6890,  ...,  0.4343,  0.2908,  0.7380],\n",
+       "        [-0.2346, -0.0873, -0.6890,  ...,  0.4344,  0.2908,  0.7379],\n",
+       "        [-0.2537, -0.0193, -0.8743,  ...,  0.1602,  0.1866,  0.8086]],\n",
        "       device='cuda:1', grad_fn=<AddmmBackward>)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +376,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([9, 2])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#initial pos x,y\n",
+    "init_pos = xd[:,0,:2]\n",
+    "init_pos.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -322,52 +407,146 @@
        "torch.Size([9, 256])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#embedding\n",
     "output.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "__init__() missing 2 required positional arguments: 'n_components' and 'n_features'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-c1be28b085a8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mGaussianMixture\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 2 required positional arguments: 'n_components' and 'n_features'"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Decoder(nn.Module):\n",
-    "    def __init__(self, size_embedding):\n",
-    "        self.dense1 = nn.Linear(in_features=size_embedding, out_features=512)\n",
-    "        self.dense2 = nn.Linear(in_features=512, out_features=512)\n",
-    "        self.dense3 = nn.Linear(in_features=512, out_features=512)\n",
-    "        self.dense4 = nn.Linear(in_features=512, out_features=512)\n",
-    "    \n",
-    "    def forward(self, x):\n",
-    "        x = F.relu(self.dense1(x))\n",
-    "        x = F.relu(self.dense2(x))\n",
-    "        x = F.relu(self.dense3(x))\n",
-    "        x = F.relu(self.dense4(x))"
+    "pos_pred_input = torch.cat((output, init_pos), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([9, 258])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pos_pred_input.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([9, 1, 258])"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#pos_pred_input = pos_pred_input[:,:,None]\n",
+    "pos_pred_input[:,None,:].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[-0.1477,  0.0227, -0.9072,  ...,  0.7555,  0.1517,  0.5780]],\n",
+       "\n",
+       "        [[-0.1477,  0.0228, -0.9072,  ...,  0.7556,  1.1419,  0.0811]],\n",
+       "\n",
+       "        [[-0.3132, -0.0559, -0.8154,  ...,  0.8603,  2.0582,  0.6355]],\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "        [[-0.2346, -0.0872, -0.6890,  ...,  0.7380,  1.5922,  0.7573]],\n",
+       "\n",
+       "        [[-0.2346, -0.0873, -0.6890,  ...,  0.7379,  0.6347,  0.8220]],\n",
+       "\n",
+       "        [[-0.2537, -0.0193, -0.8743,  ...,  0.8086,  0.6258,  0.7169]]],\n",
+       "       device='cuda:1', grad_fn=<SliceBackward>)"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pos_pred_input[:,None,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Position_prediction_model = Relational(d_model=64, nhead=4, dff=256, nlayers=6, input_size=256+2, dropout = 0)\n",
+    "Embedding_prediction_model = Relational(d_model=64, nhead=4, dff=256, nlayers=6, input_size=256+2+2, dropout = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Position_prediction_model = Position_prediction_model.to(device)\n",
+    "Embedding_prediction_model = Embedding_prediction_model.to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos_pred = Position_prediction_model(pos_pred_input, None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([9, 64])"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pos_pred.shape"
    ]
   }
  ],
