--- a/SmallTests.ipynb
+++ b/SmallTests.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,6 +531,20 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -766,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,13 +790,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
     "import os\n",
-    "from models import *"
+    "from models import *\n",
+    "from utils import *\n",
+    "from data.loaders import *\n",
+    "from torch.utils.data import DataLoader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batchdata = BatchCoSELoader(path = \"/data/ajimenez/\",\n",
+    "                          filenames={\"inputs_file\" : \"inputs_list_based.pkl\",\n",
+    "                                     \"targets_file\": \"target_list_based.pkl\"}\n",
+    "                        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_loader = DataLoader(dataset =batchdata,\n",
+    "                batch_size = 1, #data is already in batch mode, batch_size = 1 means iterating every .get_next() returns a new batch\n",
+    "                )"
    ]
   },
   {
@@ -791,7 +831,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cose_model  = CoSEModel(**config_)"
+    "input_, target_ = next(iter(train_loader))"
    ]
   },
   {
@@ -800,8 +840,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs = pickle.load(open(os.path.join(\"D:\\Projects\\RC-PWC2020\\data\", \"inputs_list_based.pkl\"), 'rb'))\n",
-    "targets = pickle.load(open(os.path.join(\"D:\\Projects\\RC-PWC2020\\data\", \"target_list_based.pkl\"), 'rb'))"
+    "cose_model  = CoSEModel(**config_)"
    ]
   },
   {
@@ -810,8 +849,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_input = inputs[0]\n",
-    "sample_target = targets[0]"
+    "enc_inputs = input_['encoder_inputs'].squeeze(dim=0)\n",
+    "t_inputs = input_['t_input'].squeeze(dim=0)\n",
+    "stroke_len_inputs = input_['seq_len'].squeeze(dim=0)\n",
+    "inputs_start_coord = input_['start_coord'].squeeze(dim = 0)\n",
+    "inputs_end_coord = input_['end_coord'].squeeze(dim = 0)\n",
+    "num_strokes_x_diagram_tensor = input_['num_strokes'].squeeze(dim = 0)"
    ]
   },
   {
@@ -820,16 +863,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch"
+    "_, look_ahead_mask, _ = generate_3d_mask(enc_inputs, stroke_len_inputs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_, target_ = batch_diagram_to_stroke(sample_input, sample_target, 3)"
+    "encoder_out = cose_model.encoder(enc_inputs.permute(1,0,2), stroke_len_inputs, look_ahead_mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = {\"input_type\": \"hybrid\",\n",
+    "                 \"num_predictive_inputs\": 32,\n",
+    "                 \"replace_padding\": True,\n",
+    "                 \"end_positions\": False,\n",
+    "                 \"stop_predictive_grad\": False}"
    ]
   },
   {
@@ -838,152 +894,99 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "enc_inputs = torch.from_numpy(input_['encoder_inputs'])\n",
-    "t_inputs = torch.from_numpy(input_['t_input'])\n",
-    "stroke_len_inputs = torch.from_numpy(input_['seq_len'])"
+    "pred_inputs, pred_input_seq_len, context_pos, pred_targets, target_pos = random_index_sampling(encoder_out,inputs_start_coord,\n",
+    "                                                                                   inputs_end_coord,num_strokes_x_diagram_tensor,\n",
+    "                                                                                   input_type =config[\"input_type\"],\n",
+    "                                                                                   num_predictive_inputs = config[\"num_predictive_inputs\"],\n",
+    "                                                                                   replace_padding = config[\"replace_padding\"],\n",
+    "                                                                                   end_positions = config[\"end_positions\"]\n",
+    "                                                                                  )\n",
+    "pred_targets.detach()\n",
+    "if config[\"stop_predictive_grad\"]:\n",
+    "    pred_inputs.detach()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1376, 13, 10])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cat([pred_inputs, context_pos], dim = 2).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1376, 13, 2])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target_pos.unsqueeze(dim = 1).repeat(1, pred_inputs.shape[1], 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_square_subsequent_mask(sz):\n",
-    "    mask = (torch.triu(torch.ones(sz, sz)) == 1).transpose(0, 1)\n",
-    "    mask = mask.float().masked_fill(mask == 0, float('-inf')).masked_fill(mask == 1, float(0.0))\n",
-    "    return mask"
+    "pos_model_inputs = torch.cat([pred_inputs, context_pos, ], dim = 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_model_inputs = torch.cat([pred_inputs, context_pos, ], dim = 2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_3d_mask(seq_input, seq_len_input):\n",
-    "    look_ahead_mask = generate_square_subsequent_mask(seq_input.shape[1])\n",
-    "    seq_mask = 1 - (torch.arange(stroke_len_inputs.max().item())[None, :] < stroke_len_inputs[:, None]).float()\n",
-    "    seq_mask  = seq_mask.masked_fill(seq_mask == 1, float('-inf')).unsqueeze(dim=2).repeat(1,1,seq_mask.shape[1])\n",
-    "    return torch.minimum(seq_mask, look_ahead_mask), look_ahead_mask, seq_mask"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "src_3d_mask, look_ahead_mask, seq_mask = generate_3d_mask(enc_inputs, stroke_len_inputs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([97, 768, 64])\n",
-      "tensor([[[ 0.0530,  1.5284, -1.4227,  ..., -0.9789, -1.0885, -0.8036],\n",
-      "         [ 0.1772,  1.5447, -1.3344,  ..., -0.8030, -1.0910, -0.7979],\n",
-      "         [ 0.3444,  1.3610, -1.4185,  ..., -1.0445, -0.8237, -1.3872],\n",
-      "         ...,\n",
-      "         [-0.1718,  0.4918, -1.3834,  ..., -0.7728,  1.6515,  0.4093],\n",
-      "         [-0.0378,  0.4513, -1.4079,  ..., -0.7473,  1.6977,  0.2563],\n",
-      "         [-0.1174,  0.1912, -1.6401,  ..., -0.7678,  1.7473,  0.1135]],\n",
-      "\n",
-      "        [[ 0.0530,  1.5284, -1.4227,  ..., -0.9789, -1.0885, -0.8036],\n",
-      "         [ 0.2134,  0.8767, -1.7480,  ..., -1.3055, -0.2065, -1.6600],\n",
-      "         [ 0.2260,  0.1671, -2.0990,  ..., -1.2285,  0.4287, -1.7383],\n",
-      "         ...,\n",
-      "         [-0.3428, -1.6862, -1.7424,  ..., -1.2098,  2.3888,  1.1468],\n",
-      "         [-0.2578, -1.6595, -1.8023,  ..., -1.1795,  2.4979,  1.0440],\n",
-      "         [-0.2620, -1.8088, -2.0301,  ..., -1.1767,  2.4686,  0.8790]],\n",
-      "\n",
-      "        [[ 0.0530,  1.5284, -1.4227,  ..., -0.9789, -1.0885, -0.8036],\n",
-      "         [ 0.2634,  1.0889, -1.7224,  ..., -1.1543, -0.8642, -1.4616],\n",
-      "         [ 0.2245,  0.8336, -1.8706,  ..., -0.7642, -0.5266, -0.4249],\n",
-      "         ...,\n",
-      "         [-0.3326,  0.7177, -1.5975,  ..., -1.0422,  1.4580,  0.0843],\n",
-      "         [-0.2146,  0.6668, -1.6243,  ..., -1.0145,  1.5186, -0.0989],\n",
-      "         [-0.2961,  0.3912, -1.8958,  ..., -1.0107,  1.5743, -0.2594]],\n",
-      "\n",
-      "        ...,\n",
-      "\n",
-      "        [[ 0.0530,  1.5284, -1.4227,  ..., -0.9789, -1.0885, -0.8036],\n",
-      "         [ 0.1942,  1.5609, -1.3336,  ..., -0.8165, -1.0846, -0.7965],\n",
-      "         [ 0.2584,  1.4914, -1.3186,  ..., -0.7448, -0.9708, -0.8779],\n",
-      "         ...,\n",
-      "         [-0.2656,  0.5842, -1.4600,  ..., -0.8537,  1.5737,  0.1905],\n",
-      "         [-0.1462,  0.5375, -1.4921,  ..., -0.8251,  1.6356,  0.0153],\n",
-      "         [-0.2274,  0.2564, -1.7555,  ..., -0.8514,  1.6949, -0.1568]],\n",
-      "\n",
-      "        [[ 0.0530,  1.5284, -1.4227,  ..., -0.9789, -1.0885, -0.8036],\n",
-      "         [ 0.1804,  1.5456, -1.3344,  ..., -0.8061, -1.0911, -0.8014],\n",
-      "         [ 0.2178,  1.4604, -1.3191,  ..., -0.7101, -0.9896, -0.8738],\n",
-      "         ...,\n",
-      "         [-0.2739,  0.6749, -1.4066,  ..., -0.8314,  1.4963,  0.1010],\n",
-      "         [-0.1560,  0.6364, -1.4333,  ..., -0.8066,  1.5647, -0.0678],\n",
-      "         [-0.2429,  0.3523, -1.6997,  ..., -0.8240,  1.6300, -0.2326]],\n",
-      "\n",
-      "        [[ 0.1368,  1.2792, -1.8077,  ..., -1.4800, -0.7923, -0.6445],\n",
-      "         [ 0.3376,  1.3133, -1.7315,  ..., -1.2874, -0.7858, -0.6414],\n",
-      "         [ 0.4150,  1.2275, -1.7205,  ..., -1.1850, -0.5992, -0.7128],\n",
-      "         ...,\n",
-      "         [-0.3260,  0.7346, -1.5391,  ..., -1.0515,  1.3547,  0.0746],\n",
-      "         [-0.2111,  0.6869, -1.5690,  ..., -1.0267,  1.4195, -0.1008],\n",
-      "         [-0.2891,  0.4138, -1.8338,  ..., -1.0268,  1.4809, -0.2588]]],\n",
-      "       grad_fn=<PermuteBackward>)\n"
-     ]
-    }
-   ],
-   "source": [
-    "out_encoder = cose_model.encoder(enc_inputs.permute(1,0,2), stroke_len_inputs, look_ahead_mask)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.5962,  1.6801,  0.5153,  ..., -1.4957, -0.4100,  0.0826],\n",
-       "        [ 0.2414,  0.7255,  0.1064,  ..., -0.6304,  0.0044,  0.5023],\n",
-       "        [ 0.6303,  0.8308,  0.5827,  ..., -0.8371, -0.2658, -0.2817],\n",
-       "        ...,\n",
-       "        [ 0.6275,  1.5211,  0.6182,  ..., -1.3546, -0.2110,  0.0343],\n",
-       "        [ 0.4640,  1.3644,  0.5649,  ..., -1.3547, -0.2803,  0.0281],\n",
-       "        [ 0.4412,  1.4317,  0.7230,  ..., -1.4038, -0.6683,  0.3492]],\n",
-       "       grad_fn=<AddmmBackward>)"
+       "(torch.Size([1376, 13, 8]),\n",
+       " torch.Size([1376]),\n",
+       " torch.Size([1376, 13, 2]),\n",
+       " torch.Size([1376, 8]),\n",
+       " torch.Size([1376, 2]))"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "out_encoder"
+    "pred_inputs.shape, pred_input_seq_len.shape, context_pos.shape, pred_targets.shape, target_pos.shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1298,9 +1301,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1733,7 +1734,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
