--- a/Alex_sum_eval.ipynb
+++ b/Alex_sum_eval.ipynb
@@ -161,22 +161,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<utils.utils.AggregateAvg at 0x7f693b292710>"
+       "({'rc_chamfer_stroke': 0.04273923939346498,\n",
+       "  'nll_embedding': -2.6050239,\n",
+       "  'pred_chamfer_stroke': 0.055498375289230115},\n",
+       " 1)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eval_loss"
+    "eval_loss.summary_and_reset()"
    ]
   },
   {
