qualitative_eval_step now working from outside call

--- a/Alex_sum_eval.ipynb
+++ b/Alex_sum_eval.ipynb
@@ -137,7 +137,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "models_tuple = [cose.embedding_predictive_model, cose.decoder]\n",
+    "models_quant_eval = [cose.embedding_predictive_model, cose.decoder]\n",
+    "models_qual_eval = [cose.position_predictive_model, cose.embedding_predictive_model, cose.decoder]\n",
     "stats_tuple = [mean_channel, std_channel]"
    ]
   },
@@ -157,6 +158,29 @@
    ],
    "source": [
     "eval_loss, recon_chamfer, pred_chamfer = quantitative_eval_step(encoder_out, out_eval_parse_input, out_eval_parse_target, models_tuple, stats_tuple, eval_loss, cose.device, cose.config.rel_nhead )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cose' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-d1bceec5b766>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mqualitative_eval_step\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mencoder_out\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout_eval_parse_input\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout_eval_parse_target\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodels_tuple\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstats_tuple\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcose\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcose\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrel_nhead\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/CoSE-pytorch/utils/eval.py\u001b[0m in \u001b[0;36mqualitative_eval_step\u001b[0;34m(encoder_out, out_eval_parse_input, out_eval_parse_target, models, stats_channels, device, rel_nhead)\u001b[0m\n\u001b[1;32m    134\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    135\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mstroke_i\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontext_ids\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_strokes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 136\u001b[0;31m         \u001b[0mcontext_embeddings\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mar_start_pos\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredicted_batch_stroke\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredicted_batch_strat_pos\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdraw_seq_len\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdraw_pred_strokes_ar_step\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstroke_i\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcontext_embeddings\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mar_start_pos\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmean_channel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstd_channel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrel_nhead\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdecoded_length\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m50\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdraw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    137\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    138\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mpredicted_batch_stroke\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredicted_batch_strat_pos\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdraw_seq_len\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/CoSE-pytorch/utils/eval.py\u001b[0m in \u001b[0;36mdraw_pred_strokes_ar_step\u001b[0;34m(stroke_i, context_embeddings, ar_start_pos, mean_channel, std_channel, rel_nhead, device, decoded_length, draw)\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m     \u001b[0;31m# mask for position predictive model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 65\u001b[0;31m     \u001b[0mseq_mask_rel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseq_len\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcose\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mseq_len\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     66\u001b[0m     \u001b[0mseq_mask_rel\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0mseq_mask_rel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmasked_fill\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseq_mask_rel\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'-inf'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munsqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrepeat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mseq_mask_rel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrepeat_interleave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrel_nhead\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'cose' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "qualitative_eval_step(encoder_out, out_eval_parse_input, out_eval_parse_target, models_tuple, stats_tuple, cose.device, cose.config.rel_nhead)"
    ]
   },
   {
