updates on eval.py and cose_model.py

--- a/Alex_sum_eval.ipynb
+++ b/Alex_sum_eval.ipynb
@@ -101,11 +101,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "i = 0\n",
-    "for batch_input, batch_target in iter(valid_loader):\n",
-    "    if i == 1:\n",
-    "        break\n",
-    "    i+=1"
+    "eval_loss = AggregateAvg()\n",
+    "models_quant_eval = [cose.embedding_predictive_model, cose.decoder]\n",
+    "models_qual_eval = [cose.position_predictive_model, cose.embedding_predictive_model, cose.decoder]\n",
+    "stats_tuple = [mean_channel, std_channel]"
    ]
   },
   {
@@ -114,7 +113,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eval_loss = AggregateAvg()"
+    "i = 0\n",
+    "for batch_input, batch_target in iter(valid_loader):\n",
+    "    if i == 1:\n",
+    "        break\n",
+    "    i+=1"
    ]
   },
   {
@@ -133,59 +136,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "models_quant_eval = [cose.embedding_predictive_model, cose.decoder]\n",
-    "models_qual_eval = [cose.position_predictive_model, cose.embedding_predictive_model, cose.decoder]\n",
-    "stats_tuple = [mean_channel, std_channel]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/ajimenez/CoSE-pytorch/models/gmm.py:42: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
-      "  out_pi = torch.nn.functional.softmax(out_pi)\n"
+      "CPU times: user 862 ms, sys: 0 ns, total: 862 ms\n",
+      "Wall time: 590 ms\n"
      ]
     }
    ],
    "source": [
-    "eval_loss, recon_chamfer, pred_chamfer = quantitative_eval_step(encoder_out, out_eval_parse_input, out_eval_parse_target, models_tuple, stats_tuple, eval_loss, cose.device, cose.config.rel_nhead )"
+    "%%time\n",
+    "eval_loss, recon_chamfer, pred_chamfer = quantitative_eval_step(encoder_out, out_eval_parse_input, out_eval_parse_target, models_quant_eval, stats_tuple, eval_loss, cose.device, cose.config.rel_nhead )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'cose' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-d1bceec5b766>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mqualitative_eval_step\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mencoder_out\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout_eval_parse_input\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout_eval_parse_target\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodels_tuple\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstats_tuple\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcose\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcose\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrel_nhead\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/CoSE-pytorch/utils/eval.py\u001b[0m in \u001b[0;36mqualitative_eval_step\u001b[0;34m(encoder_out, out_eval_parse_input, out_eval_parse_target, models, stats_channels, device, rel_nhead)\u001b[0m\n\u001b[1;32m    134\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    135\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mstroke_i\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontext_ids\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_strokes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 136\u001b[0;31m         \u001b[0mcontext_embeddings\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mar_start_pos\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredicted_batch_stroke\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredicted_batch_strat_pos\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdraw_seq_len\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdraw_pred_strokes_ar_step\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstroke_i\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcontext_embeddings\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mar_start_pos\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmean_channel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstd_channel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrel_nhead\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdecoded_length\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m50\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdraw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    137\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    138\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mpredicted_batch_stroke\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredicted_batch_strat_pos\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdraw_seq_len\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/CoSE-pytorch/utils/eval.py\u001b[0m in \u001b[0;36mdraw_pred_strokes_ar_step\u001b[0;34m(stroke_i, context_embeddings, ar_start_pos, mean_channel, std_channel, rel_nhead, device, decoded_length, draw)\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m     \u001b[0;31m# mask for position predictive model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 65\u001b[0;31m     \u001b[0mseq_mask_rel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseq_len\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcose\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mseq_len\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     66\u001b[0m     \u001b[0mseq_mask_rel\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0mseq_mask_rel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmasked_fill\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseq_mask_rel\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'-inf'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munsqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrepeat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mseq_mask_rel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrepeat_interleave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrel_nhead\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'cose' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "qualitative_eval_step(encoder_out, out_eval_parse_input, out_eval_parse_target, models_tuple, stats_tuple, cose.device, cose.config.rel_nhead)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -193,11 +163,11 @@
       "text/plain": [
        "({'rc_chamfer_stroke': 0.04273923939346498,\n",
        "  'nll_embedding': -2.6050239,\n",
-       "  'pred_chamfer_stroke': 0.055498375289230115},\n",
+       "  'pred_chamfer_stroke': 0.05665886122275145},\n",
        " 1)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,10 +178,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2.44 s, sys: 646 µs, total: 2.44 s\n",
+      "Wall time: 2.44 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "predicted_batch_stroke, predicted_batch_strat_pos, draw_seq_len = qualitative_eval_step(encoder_out, out_eval_parse_input, out_eval_parse_target, models_qual_eval, stats_tuple, cose.device, cose.config.rel_nhead, num_extra_pred = 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Old test_strokes"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "\n",
+    "    def test_strokes(self, valid_loader):\n",
+    "\n",
+    "        self.encoder.eval()\n",
+    "        self.decoder.eval()\n",
+    "        self.embedding_predictive_model.eval()\n",
+    "        self.position_predictive_model.eval()\n",
+    "\n",
+    "\n",
+    "        mean_channel, std_channel = get_stats(self.config.stats_path)\n",
+    "        \n",
+    "        num_batch = 0\n",
+    "\n",
+    "        list_name_files = []\n",
+    "        list_recon_cd = []\n",
+    "        list_pred_cd = []\n",
+    "        list_loss_eval_ae = []\n",
+    "        list_loss_eval_pos = []\n",
+    "        list_loss_eval_emb = []\n",
+    "        \n",
+    "        for batch_input, batch_target in iter(valid_loader):\n",
+    "\n",
+    "            num_batch = num_batch + 1\n",
+    "            encoder_inputs = batch_input['encoder_inputs'].squeeze(dim = 0).to(self.device)\n",
+    "            num_strokes = batch_input['num_strokes'].squeeze(dim = 0).to(self.device)\n",
+    "            strok_len_inputs = batch_input['seq_len'].squeeze(dim = 0).to(self.device)\n",
+    "            start_coord = batch_input['start_coord'].squeeze(dim = 0).squeeze().to(self.device)\n",
+    "            #forward autoregressive\n",
+    "            with torch.no_grad():\n",
+    "                comb_mask, look_ahead_mask, _ = generate_3d_mask(encoder_inputs, strok_len_inputs,self.device, self.config.enc_nhead)\n",
+    "                encoder_out = self.encoder(encoder_inputs.permute(1,0,2), strok_len_inputs, comb_mask)\n",
+    "                diagram_embedding, padded_max_num_strokes, _, num_diagrams = reshape_stroke2diagram(encoder_out,num_strokes)\n",
+    "                start_pos_base = start_coord.reshape(num_diagrams,padded_max_num_strokes,2)\n",
+    "                #calculate recon_cd, pred_cd, diagram output\n",
+    "                loss_eval_ae, recon_cd, _ = get_reconstruction_metrics(expected_strokes=encoder_inputs,\n",
+    "                                                                       expected_start_coord=start_coord,\n",
+    "                                                                       pred_embedding =encoder_out,\n",
+    "                                                                       recon_start_coord=start_coord,\n",
+    "                                                                       strok_len_inputs=strok_len_inputs,\n",
+    "                                                                       decoder=self.decoder,\n",
+    "                                                                       mean_channel = mean_channel,\n",
+    "                                                                       std_channel=std_channel,\n",
+    "                                                                       device = self.device)\n",
+    "                \n",
+    "                loss_eval_emb, loss_eval_pos, pred_cd, recons_strokes, recons_start_pos = get_prediction_metrics(encoder_inputs =encoder_inputs,\n",
+    "                                                                                                                 strok_len_inputs = strok_len_inputs,\n",
+    "                                                                                                                 diagram_embedding = diagram_embedding,\n",
+    "                                                                                                                 start_pos_base = start_pos_base,\n",
+    "                                                                                                                  num_strokes = num_strokes,\n",
+    "                                                                                                                 models = [self.decoder, self.position_predictive_model, self.embedding_predictive_model],\n",
+    "                                                                                                                 device = self.device,\n",
+    "                                                                                                                 mean_channel = mean_channel,\n",
+    "                                                                                                                 std_channel = std_channel,\n",
+    "                                                                                                                 use_autoregressive = False)\n",
+    "            \n",
+    "            list_recon_cd.append(recon_cd.item()) \n",
+    "            list_pred_cd.append(pred_cd.item())\n",
+    "            list_loss_eval_ae.append(loss_eval_ae.item())\n",
+    "            list_loss_eval_pos.append(loss_eval_pos.item())\n",
+    "            list_loss_eval_emb.append(loss_eval_emb.item())\n",
+    "\n",
+    "            if num_batch==1:\n",
+    "                num_diagrams = len(recons_strokes)\n",
+    "                #save image\n",
+    "                for i_diagram in range(num_diagrams):\n",
+    "                    recons_strokes_padded_i = torch.nn.utils.rnn.pad_sequence(recons_strokes[i_diagram], batch_first=True, padding_value=0.0).cpu().detach()\n",
+    "                    seq_len_i = torch.tensor([len(i) for i in recons_strokes[i_diagram]]).cpu().detach()\n",
+    "                    recons_start_pos_i = recons_start_pos[i_diagram].squeeze().cpu().detach()\n",
+    "                    num_strokes_i = torch.tensor(len(recons_strokes[i_diagram])).cpu().detach()\n",
+    "                    \n",
+    "                    npfig, fig, _, file_save_path = self.tranform2image(recons_strokes_padded_i, seq_len_i, recons_start_pos_i, mean_channel, std_channel, num_strokes_i, file_save_name=\"diagrama_n_{}\".format(i_diagram))\n",
+    "                    list_name_files.append(file_save_path)\n",
+    "\n",
+    "        return (np.mean(list_recon_cd), np.mean(list_pred_cd), np.mean(list_loss_eval_ae),np.mean(list_loss_eval_pos), np.mean(list_loss_eval_emb), list_name_files)\n"
+   ]
   }
  ],
  "metadata": {
