eval_model updated: now working

--- a/Alex_sum_eval.ipynb
+++ b/Alex_sum_eval.ipynb
@@ -14,17 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "user = 'ajimenez'\n",
-    "path_to_model = f\"/home/{user}/CoSE-pytorch/wandb/latest-run/files/weights_trained/epoch_150\""
+    "path_to_model = f\"/home/{user}/CoSE-pytorch/wandb/run-20210212_021205-1515u115/files/weights_trained/epoch_150\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,20 +109,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "i = 0\n",
     "for batch_input, batch_target in iter(valid_loader):\n",
-    "    if i == 1:\n",
+    "    if i == 2:\n",
     "        break\n",
     "    i+=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,15 +136,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 862 ms, sys: 0 ns, total: 862 ms\n",
-      "Wall time: 590 ms\n"
+      "torch.Size([21, 8])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(encoder_out.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.12 s, sys: 21.3 ms, total: 1.14 s\n",
+      "Wall time: 840 ms\n"
      ]
     }
    ],
@@ -155,19 +172,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "({'rc_chamfer_stroke': 0.04273923939346498,\n",
-       "  'nll_embedding': -2.6050239,\n",
-       "  'pred_chamfer_stroke': 0.05665886122275145},\n",
+       "({'rc_chamfer_stroke': 0.019220714853584016,\n",
+       "  'nll_embedding': 1.2451333,\n",
+       "  'pred_chamfer_stroke': 0.058133147953452015},\n",
        " 1)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,15 +195,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.44 s, sys: 646 µs, total: 2.44 s\n",
-      "Wall time: 2.44 s\n"
+      "CPU times: user 1.37 s, sys: 0 ns, total: 1.37 s\n",
+      "Wall time: 1.36 s\n"
      ]
     }
    ],
