train autoencoder works just fine

--- a/Alex_sum_eval.ipynb
+++ b/Alex_sum_eval.ipynb
@@ -500,7 +500,7 @@
     }
    ],
    "source": [
-    "enc_inputs, t_inputs, stroke_len_inputs, inputs_start_coord, inputs_end_coord, num_strokes_x_diagram_tensor = parse_inputs(batch_input,cose.device)\n",
+    "aenc_inputs, t_inputs, stroke_len_inputs, inputs_start_coord, inputs_end_coord, num_strokes_x_diagram_tensor = parse_inputs(batch_input,cose.device)\n",
     "t_target_ink = parse_targets(batch_target,cose.device)\n",
     "# Creating sequence length mask\n",
     "comb_mask , look_ahead_mask, _ = generate_3d_mask(enc_inputs, stroke_len_inputs, cose.device, cose.config.enc_nhead)\n",
@@ -512,7 +512,7 @@
     "enc_inputs[:,:,1] = (y_ - y_.min().item())/(y_.max().item() - y_.min().item())\n",
     "encoder_out = cose.encoder(enc_inputs, stroke_len_inputs, comb_mask)\n",
     "\n",
-    "embedding = encoder_out.reshape(num_strokes_x_diagram_tensor.shape[0],-1,8)[0][:num_strokes_x_diagram_tensor[0]]\n",
+    "    embedding = encoder_out.reshape(num_strokes_x_diagram_tensor.shape[0],-1,8)[0][:num_strokes_x_diagram_tensor[0]]\n",
     "# decoder forward\n",
     "draw_seq_len = np.array([40]*(embedding.size(0)))\n",
     "#\n",
